Update tagline text in teal.html

--- a/teal.html
+++ b/teal.html
@@ -245,7 +245,7 @@
         <span class="n1">АРТЁМ</span>
         <span class="n2">САФРОНОВ</span>
       </div>
-      <p class="tagline">T-Shaped Insight — <span style="color: var(--accent-cyan)">Front Sight, Back Depth</span></p>
+      <p class="tagline">Frontend depth — <span style="color: var(--accent-cyan)">Full-stack breadth</span></p>
       <a class="status" href="https://linkedin.com/in/artyhoo" target="_blank" rel="noopener" style="text-decoration:none; cursor:pointer;"><span class="sdot"></span> OPEN TO OPPORTUNITIES</a>
     </header>
 
