--- a/green.html
+++ b/green.html
@@ -151,7 +151,7 @@
       .tagline{margin:8px 0 10px !important;font-size:11.5px !important}
       .status{font-size:10px !important;padding:5px 12px 5px 10px !important;letter-spacing:0.15em !important;background:rgba(0,255,159,0.1) !important;border:1px solid rgba(0,255,159,0.3) !important;box-shadow:none !important}
       .sdot{width:6px !important;height:6px !important;background:#00ff9f !important}
-      .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:18px 12px 18px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;overflow:hidden !important;display:flex !important;flex-direction:column !important;justify-content:space-between !important}
+      .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:18px 12px 18px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;overflow:hidden !important;display:flex !important;flex-direction:column !important;justify-content:flex-start !important;gap:14px !important}
       .sidebar::before{display:none !important}
       .sb{margin:0 !important;padding:0 !important;border-bottom:none !important}
       .sb:last-child{border-top:1px solid rgba(0,255,159,0.1) !important;padding-top:9px !important;margin-top:0 !important}
@@ -222,7 +222,6 @@
         <span class="chip">FSD</span>
         <span class="chip">Zod</span>
         <span class="chip">UI/UX</span>
-        <span class="chip">Web-design</span>
       </div>
     </div>
     <div class="sb">
