--- a/green.html
+++ b/green.html
@@ -39,9 +39,9 @@
     .sb-h::before{content:"//";color:#00ff9f88}
     .sb-h::after{content:"";flex:1;height:1px;background:var(--gr-hi)}
     
-    /* === ЛУЧШИЙ ВАРИАНТ СКИЛЛОВ — 2 РОВНЫЕ КОЛОНКИ === */
-    .chips{display:grid;grid-template-columns:1fr 1fr;gap:7px 9px;align-items:start}
-    .chip{width:100%;font-family:"JetBrains Mono",monospace;font-size:10.5px;padding:4px 9px;border-radius:3px;background:var(--card);border:1px solid var(--gr);color:var(--t-body);white-space:nowrap}
+    /* === ПРОСТО НЕБОЛЬШИЕ ОТСТУПЫ (как ты просил) === */
+    .chips{display:flex;flex-wrap:wrap;gap:6px}
+    .chip{font-family:"JetBrains Mono",monospace;font-size:10.5px;padding:4px 9px;border-radius:3px;background:var(--card);border:1px solid var(--gr);color:var(--t-body)}
     .chip.core{background:var(--neon-dim);border-color:var(--neon-edge);color:var(--neon);font-weight:500}
 
     .contacts{display:flex;flex-direction:column;gap:8px}
@@ -101,8 +101,8 @@
       .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:22px 14px 26px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;display:flex !important;flex-direction:column !important;justify-content:space-between !important;gap:18px !important}
       .sb{margin:0 !important;padding:0 0 12px 0 !important;border-bottom:1px solid rgba(0,255,159,0.1) !important}
       .sb:last-child{margin-top:auto !important;border-top:1px solid rgba(0,255,159,0.16) !important;padding-top:18px !important;padding-bottom:0 !important;border-bottom:none !important}
-      .chips{gap:5px 7px !important}
-      .chip{width:100% !important;font-size:8.2px !important;padding:3px 7px !important}
+      .chips{gap:4.5px !important}
+      .chip{font-size:8.3px !important;padding:3px 7px !important}
       .eyebrow{margin-bottom:8px !important;letter-spacing:0.22em !important}
       .name-block{margin-bottom:8px !important;gap:0.18em !important}
       .n2{text-shadow:none !important;color:#e2f5eb !important}
@@ -142,7 +142,6 @@
 </head>
 <body>
 <div class="page">
-  <!-- Весь остальной HTML остался точно таким же, как у тебя был -->
   <header class="hero">
     <div class="eyebrow">Fullstack Developer · React · Next.js · TypeScript</div>
     <div class="name-block">
@@ -155,7 +154,6 @@
   </header>
 
   <aside class="sidebar">
-    <!-- Все .sb блоки остались без изменений (только стили обновлены) -->
     <div class="sb">
       <div class="sb-h">Frontend</div>
       <div class="chips">
@@ -213,17 +211,40 @@
     <div class="sb">
       <div class="sb-h">Контакты</div>
       <div class="contacts">
-        <a class="ct" href="mailto:devartyhoo@gmail.com">... (все контакты как были) ...</a>
-        <!-- полный блок контактов из твоего оригинала -->
+        <a class="ct" href="mailto:devartyhoo@gmail.com">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+          devartyhoo@gmail.com
+        </a>
+        <a class="ct" href="https://github.com/Yhooi2">
+          <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
+          github.com/Yhooi2
+        </a>
+        <a class="ct" href="https://linkedin.com/in/artyhoo">
+          <svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+          linkedin.com/in/artyhoo
+        </a>
+        <a class="ct" href="https://t.me/ArtYhoo">
+          <svg viewBox="0 0 24 24"><path d="M11.944 0A12 12 0 000 12a12 12 0 0012 12 12 12 0 0012-12A12 12 0 0012 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 01.171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
+          t.me/ArtYhoo
+        </a>
+        <a class="ct" href="https://leetcode.com/u/Yhooi2">
+          <svg viewBox="0 0 24 24"><path d="M13.483 0a1.374 1.374 0 00-.961.438L7.116 6.226l-3.854 4.126a5.266 5.266 0 00-1.209 2.104 5.35 5.35 0 00-.125.513 5.527 5.527 0 00.062 2.362 5.83 5.83 0 00.349 1.017 5.938 5.938 0 001.271 1.818l4.277 4.193.039.038c2.248 2.165 5.852 2.133 8.063-.074l2.396-2.392c.54-.54.54-1.414.003-1.955a1.378 1.378 0 00-1.951-.003l-2.396 2.392a3.021 3.021 0 01-4.205.038l-.02-.019-4.276-4.193c-.652-.64-.972-1.469-.948-2.263a2.68 2.68 0 01.066-.523 2.545 2.545 0 01.619-1.164L9.13 8.114c1.058-1.134 3.204-1.27 4.43-.278l3.501 2.831c.593.48 1.461.387 1.94-.207a1.384 1.384 0 00-.207-1.943l-3.5-2.831c-.8-.647-1.766-1.045-2.774-1.202l2.015-2.158A1.384 1.384 0 0013.483 0zm-2.866 12.815a1.38 1.38 0 00-1.38 1.382 1.38 1.38 0 001.38 1.382H20.79a1.38 1.38 0 001.38-1.382 1.38 1.38 0 00-1.38-1.382z"/></svg>
+          leetcode.com/u/Yhooi2
+        </a>
+        <span class="ct">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
+          Москва, RU
+        </span>
       </div>
     </div>
   </aside>
+
   <main class="main-area">
     <div class="sh"><span class="sh-num">00/</span><span class="sh-label">О себе</span><span class="sh-line"></span></div>
     <p class="about">
-      Fullstack-разработчик с экспертизой во фронтенде (React 19, Next.js 15, TypeScript),
-      <strong>NestJS</strong> и системным пониманием стека — от ОС и сетей до SQL и архитектурных паттернов GoF.
-      <strong>T-shaped инженер</strong> с базой в Web-design и UI/UX и опытом
+      Fullstack-разработчик с экспертизой во фронтенде (React 19, Next.js 15, TypeScript), 
+      <strong>NestJS</strong> и системным пониманием стека — от ОС и сетей до SQL и архитектурных паттернов GoF. 
+      <strong>T-shaped инженер</strong> с базой в Web-design и UI/UX и опытом 
       <strong>контрактной разработки (ИП)</strong> для корпоративных клиентов.
     </p>
     <div class="pill-row">
@@ -237,22 +258,10 @@
       <span class="pill">UI/UX</span>
     </div>
     <div class="stats">
-      <div class="stat">
-        <div class="sv">ИП<span style="color:var(--neon)"> ↗</span></div>
-        <div class="sd">Контракт · 2023—н.в.</div>
-      </div>
-      <div class="stat">
-        <div class="sv">4<span style="color:var(--neon)">+</span></div>
-        <div class="sd">задеплоенных проектов</div>
-      </div>
-      <div class="stat">
-        <div class="sv">NPM<span style="color:var(--neon)"> ✓</span></div>
-        <div class="sd">published lib<br/><small>shadcn-glass-ui</small></div>
-      </div>
-      <div class="stat">
-        <div class="sv">22<span style="color:var(--neon)"> ★</span></div>
-        <div class="sd">GitHub Stars<br/><small>shadcn-glass-ui</small></div>
-      </div>
+      <div class="stat"><div class="sv">ИП<span style="color:var(--neon)"> ↗</span></div><div class="sd">Контракт · 2023—н.в.</div></div>
+      <div class="stat"><div class="sv">4<span style="color:var(--neon)">+</span></div><div class="sd">задеплоенных проектов</div></div>
+      <div class="stat"><div class="sv">NPM<span style="color:var(--neon)"> ✓</span></div><div class="sd">published lib<br/><small>shadcn-glass-ui</small></div></div>
+      <div class="stat"><div class="sv">22<span style="color:var(--neon)"> ★</span></div><div class="sd">GitHub Stars<br/><small>shadcn-glass-ui</small></div></div>
     </div>
 
     <div class="sh"><span class="sh-num">01/</span><span class="sh-label">Проекты & Контракты</span><span class="sh-line"></span></div>
@@ -261,11 +270,7 @@
       <div class="freelance-desc">Разработка встраиваемых динамических виджетов с таблицами и графиками для <strong style="color:var(--t-primary)">корпоративных клиентов (B2B)</strong>. Работа через ИП, проекты под NDA.</div>
     </div>
     <div class="proj">
-      <div class="proj-head">
-        <span class="proj-name">shadcn-glass-ui</span>
-        <div class="proj-badges"><span class="badge">★ 22</span><span class="badge">npm</span><span class="badge">open source</span></div>
-        <span class="proj-date">2024 — н.в.</span>
-      </div>
+      <div class="proj-head"><span class="proj-name">shadcn-glass-ui</span><div class="proj-badges"><span class="badge">★ 22</span><span class="badge">npm</span><span class="badge">open source</span></div><span class="proj-date">2024 — н.в.</span></div>
       <div class="proj-stack">React 19 · TypeScript 5.9 · Tailwind 4 · Storybook 10 · Vitest 4 · GitHub Actions</div>
       <p class="proj-desc">Опубликованная npm-библиотека: <strong>55+ glassmorphism-компонентов</strong>. 1355+ тестов, WCAG 2.1 AA, CI/CD. Принята в registry.directory.</p>
       <div class="proj-links">
@@ -275,11 +280,7 @@
       </div>
     </div>
     <div class="proj">
-      <div class="proj-head">
-        <span class="proj-name">Wildhaven</span>
-        <div class="proj-badges"><span class="badge">commercial</span><span class="badge">deployed</span><span class="badge">live</span></div>
-        <span class="proj-date">2024</span>
-      </div>
+      <div class="proj-head"><span class="proj-name">Wildhaven</span><div class="proj-badges"><span class="badge">commercial</span><span class="badge">deployed</span><span class="badge">live</span></div><span class="proj-date">2024</span></div>
       <div class="proj-stack">Next.js 15 · React 19 · PostgreSQL · TanStack Query · Tailwind CSS</div>
       <p class="proj-desc"><strong>Задеплоенная</strong> booking-платформа аренды кабин: авторизация, фильтрация, бронирование, личный кабинет.</p>
       <div class="proj-links">
@@ -289,21 +290,13 @@
       </div>
     </div>
     <div class="proj">
-      <div class="proj-head">
-        <span class="proj-name">nextjs-vitest-playwright</span>
-        <div class="proj-badges"><span class="badge">template</span><span class="badge">fullstack</span></div>
-        <span class="proj-date">2024</span>
-      </div>
+      <div class="proj-head"><span class="proj-name">nextjs-vitest-playwright</span><div class="proj-badges"><span class="badge">template</span><span class="badge">fullstack</span></div><span class="proj-date">2024</span></div>
       <div class="proj-stack">Next.js 15 · TypeScript · Vitest · Playwright e2e · Storybook · Drizzle ORM · Zod</div>
       <p class="proj-desc">Fullstack-шаблон с покрытием тестами на всех уровнях: unit, компоненты, e2e. CI/CD via GitHub Actions.</p>
       <div class="proj-links"><a class="plink" href="https://github.com/Yhooi2/nextjs-vitest-playwright">GitHub</a></div>
     </div>
     <div class="proj">
-      <div class="proj-head">
-        <span class="proj-name">GitHub User Analytics</span>
-        <div class="proj-badges"><span class="badge">pet</span><span class="badge">in progress</span></div>
-        <span class="proj-date">2025 — н.в.</span>
-      </div>
+      <div class="proj-head"><span class="proj-name">GitHub User Analytics</span><div class="proj-badges"><span class="badge">pet</span><span class="badge">in progress</span></div><span class="proj-date">2025 — н.в.</span></div>
       <div class="proj-stack">React 19 · TypeScript · Apollo GraphQL · Tailwind 4 · Shadcn/ui</div>
       <p class="proj-desc">Аналитика GitHub-профилей через GraphQL API. Планируется AI-оценка профиля разработчика.</p>
       <div class="proj-links">
