--- a/green.html
+++ b/green.html
@@ -101,7 +101,7 @@
       .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:22px 14px 26px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;display:flex !important;flex-direction:column !important;justify-content:space-between !important;gap:18px !important}
       .sb{margin:0 !important;padding:0 0 12px 0 !important;border-bottom:1px solid rgba(0,255,159,0.1) !important}
       .sb:last-child{margin-top:auto !important;border-top:1px solid rgba(0,255,159,0.16) !important;padding-top:18px !important;padding-bottom:0 !important;border-bottom:none !important}
-      .chips{gap:4.5px !important}
+      .chips{display:flex;flex-wrap:wrap;gap:4.5px !important}
       .chip{font-size:8.3px !important;padding:3px 7px !important}
       .eyebrow{margin-bottom:8px !important;letter-spacing:0.22em !important}
       .name-block{margin-bottom:8px !important;gap:0.18em !important}
