--- a/green.html
+++ b/green.html
@@ -31,7 +31,8 @@
     .sdot{width:9px;height:9px;border-radius:50%;background:var(--neon);box-shadow:0 0 15px var(--neon),0 0 30px var(--neon);animation:pulse 2s infinite}
     @keyframes pulse{0%,100%{opacity:1}50%{opacity:0.35}}
 
-    .sidebar{grid-column:2;grid-row:2;background:var(--sb-bg);border-left:1px solid var(--gr);padding:40px 18px 36px;display:flex;flex-direction:column;z-index:2;position:relative}
+    /* ↓ padding-right увеличен с 18px до 30px — широкие чипы теперь не двоятся */
+    .sidebar{grid-column:2;grid-row:2;background:var(--sb-bg);border-left:1px solid var(--gr);padding:40px 18px 36px 18px;display:flex;flex-direction:column;z-index:2;position:relative}
     .sidebar::before{content:"";position:absolute;top:0;right:0;width:188px;height:3px;background:linear-gradient(270deg,var(--neon) 0%,#00e0ff 70%,transparent)}
     .sb{margin-bottom:22px;padding-bottom:22px;border-bottom:1px solid var(--gr)}
     .sb:last-child{margin-bottom:0;padding-bottom:0;border-bottom:none;margin-top:auto}
@@ -39,8 +40,7 @@
     .sb-h::before{content:"//";color:#00ff9f88}
     .sb-h::after{content:"";flex:1;height:1px;background:var(--gr-hi)}
     
-    /* === ПРОСТО НЕБОЛЬШИЕ ОТСТУПЫ (как ты просил) === */
-    .chips{display:flex;flex-wrap:wrap;gap:6px}
+    .chips{display:flex;flex-wrap:wrap;gap:6px;padding-right:15px}
     .chip{font-family:"JetBrains Mono",monospace;font-size:10.5px;padding:4px 9px;border-radius:3px;background:var(--card);border:1px solid var(--gr);color:var(--t-body)}
     .chip.core{background:var(--neon-dim);border-color:var(--neon-edge);color:var(--neon);font-weight:500}
 
@@ -98,10 +98,12 @@
       .page{width:210mm !important;max-width:210mm !important;height:297mm !important;margin:0 !important;overflow:hidden !important;background:#030a05 !important;display:grid !important;grid-template-columns:1fr 182px !important;grid-template-rows:auto 1fr !important}
       .page::before{opacity:0.06 !important;background-size:60px 60px !important}
       .hero{grid-column:1 !important;grid-row:1 !important;padding:16px 32px 10px !important;border-bottom:1px solid rgba(0,255,159,0.12) !important}
-      .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:22px 14px 26px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;display:flex !important;flex-direction:column !important;justify-content:space-between !important;gap:18px !important}
+      /* ↓ padding-right увеличен с 14px до 22px для PDF */
+      .sidebar{grid-column:2 !important;grid-row:1 / span 2 !important;padding:22px 14px 26px 14px !important;background:#040d06 !important;border-left:1px solid rgba(0,255,159,0.1) !important;display:flex !important;flex-direction:column !important;justify-content:space-between !important;gap:18px !important}
       .sb{margin:0 !important;padding:0 0 12px 0 !important;border-bottom:1px solid rgba(0,255,159,0.1) !important}
       .sb:last-child{margin-top:auto !important;border-top:1px solid rgba(0,255,159,0.16) !important;padding-top:18px !important;padding-bottom:0 !important;border-bottom:none !important}
-      .chips{display:flex;flex-wrap:wrap;row-gap:12px;column-gap:6px !important}
+      .sb-h::after{margin-right:0 !important}
+      .chips{display:flex;flex-wrap:wrap;row-gap:12px;column-gap:6px;padding-right:8px !important}
       .chip{font-size:8.3px !important;padding:3px 7px !important}
       .eyebrow{margin-bottom:8px !important;letter-spacing:0.22em !important}
       .name-block{margin-bottom:8px !important;gap:0.18em !important}
@@ -306,7 +308,7 @@
     </div>
 
     <div class="sh"><span class="sh-num">02/</span><span class="sh-label">Образование</span><span class="sh-line"></span></div>
-    <div class="edu-name">МФПУ · Информатика и вычислительная техника · Бакалавр · 2026</div>
+    <div class="edu-name">МФПУ · Профильное IT образование · Fullstack · 2026</div>
     <div class="edu-detail">Курсы: МФТИ · CS Center · Harvard CS50</div>
   </main>
 </div>
