--- a/green.html
+++ b/green.html
@@ -95,7 +95,7 @@
         --neon-dim:rgba(0,255,159,0.12) !important;--neon-edge:rgba(0,255,159,0.3) !important;
         --gr:rgba(0,255,159,0.12) !important;--gr-hi:rgba(0,255,159,0.2) !important;
       }
-      .page{width:210mm !important;max-width:210mm !important;height:297mm !important;margin:0 !important;overflow:hidden !important;background:#030a05 !important;display:grid !important;grid-template-columns:1fr 182px !important;grid-template-rows:auto 1fr !important}
+      .page{width:210mm !important;max-width:210mm !important;min-height:297mm !important;margin:0 !important;background:#030a05 !important;display:grid !important;grid-template-columns:1fr 182px !important;grid-template-rows:auto 1fr !important}
       .page::before{opacity:0.06 !important;background-size:60px 60px !important}
       .hero{grid-column:1 !important;grid-row:1 !important;padding:16px 32px 10px !important;border-bottom:1px solid rgba(0,255,159,0.12) !important}
       /* ↓ padding-right увеличен с 14px до 22px для PDF */
