--- a/green.html
+++ b/green.html
@@ -208,6 +208,8 @@
         <span class="chip">Паттерны GoF</span>
         <span class="chip">Архитектура</span>
         <span class="chip">C/C++</span>
+        <span class="chip">ASM</span>
+        
       </div>
     </div>
     <div class="sb">
