--- a/green.html
+++ b/green.html
@@ -209,15 +209,14 @@
         <span class="chip">Архитектура</span>
         <span class="chip">C/C++</span>
         <span class="chip">ASM</span>
-        
       </div>
     </div>
     <div class="sb">
       <div class="sb-h">Контакты</div>
       <div class="contacts">
-        <a class="ct" href="mailto:devartyhoo@gmail.com">
+        <a class="ct" href="/cdn-cgi/l/email-protection#4f2b2a392e3d3b362720200f28222e2623612c2022">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-          devartyhoo@gmail.com
+          <span class="__cf_email__" data-cfemail="264243504754525f4e494966414b474f4a0845494b">[email&#160;protected]</span>
         </a>
         <a class="ct" href="https://github.com/Yhooi2">
           <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
@@ -271,7 +270,7 @@
     <div class="sh"><span class="sh-num">01/</span><span class="sh-label">Проекты & Контракты</span><span class="sh-line"></span></div>
     <div class="freelance-entry">
       <div class="freelance-title">Контрактная разработка (ИП)<span class="proj-date">2023 — н.в.</span></div>
-      <div class="freelance-desc">Разработка встраиваемых динамических виджетов с таблицами и графиками для <strong style="color:var(--t-primary)">корпоративных клиентов (B2B)</strong>. Работа через ИП, проекты под NDA.</div>
+      <div class="freelance-desc">Разработка встраиваемых динамических виджетов с таблицами и графиками для <strong style="color:var(--t-primary)">корпоративных клиентов (B2B)</strong>. Работа по ИП КЭП, проекты под NDA.</div>
     </div>
     <div class="proj">
       <div class="proj-head"><span class="proj-name">shadcn-glass-ui</span><div class="proj-badges"><span class="badge">★ 22</span><span class="badge">npm</span><span class="badge">open source</span></div><span class="proj-date">2024 — н.в.</span></div>
@@ -310,8 +309,19 @@
     </div>
 
     <div class="sh"><span class="sh-num">02/</span><span class="sh-label">Образование</span><span class="sh-line"></span></div>
-    <div class="edu-name">МФПУ · Профильное IT образование · Fullstack · 2026</div>
-    <div class="edu-detail">Курсы: МФТИ · CS Center · Harvard CS50</div>
+        <div class="edu-name">МФПУ · Профильное IT образование <span style="color:var(--t-mid);font-weight:300;font-size:12px;font-family:'DM Sans',sans-serif;">· Fullstack · 2026</span></div>
+    <div class="edu-detail" style="margin-top:6px;"><span style="font-family:'JetBrains Mono',monospace;font-size:9px;letter-spacing:0.15em;text-transform:uppercase;color:var(--t-mid);">курсы</span> &nbsp;·&nbsp; МФТИ &nbsp;·&nbsp; <a href="https://stepik.org/org/compscicenter" target="_blank" style="color:inherit;text-decoration:none;">CS Center</a> &nbsp;·&nbsp; <a href="https://cs50.harvard.edu/x/" target="_blank" style="color:inherit;text-decoration:none;">Harvard CS50</a> &nbsp;·&nbsp; <a href="https://stepik.org/org/fefu" target="_blank" style="color:inherit;text-decoration:none;">ДВФУ</a></div>
+    <div class="edu-detail" style="margin-top:4px;color:var(--t-mid);font-size:11px;">
+      <a href="https://stepik.org/cert/2340486" target="_blank" style="color:inherit;text-decoration:none;">Тренажер SQL</a>
+      &nbsp;·&nbsp;
+      <a href="https://stepik.org/cert/2331544" target="_blank" style="color:inherit;text-decoration:none;">Введение в БД</a>
+      &nbsp;·&nbsp;
+      <a href="https://stepik.org/cert/2346365" target="_blank" style="color:inherit;text-decoration:none;">Linux</a>
+      &nbsp;·&nbsp;
+      <a href="https://stepik.org/cert/2312005" target="_blank" style="color:inherit;text-decoration:none;">ОС</a>
+      &nbsp;·&nbsp;
+      <a href="https://stepik.org/cert/2292048" target="_blank" style="color:inherit;text-decoration:none;">Архитектура ЭВМ</a>
+    </div>
   </main>
 </div>
 </body>
